--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="%PUBLIC_URL%/css/animate.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/css/fontawesome-all.min.css">
