--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,13 @@
 
 
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 
   <script src="%PUBLIC_URL%/js/vendor/jquery-1.12.4.min.js"></script>
   <script src="%PUBLIC_URL%/js/popper.min.js"></script>
-  <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+  <!-- <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script> -->
   <script src="%PUBLIC_URL%/js/isotope.pkgd.min.js"></script>
   <script src="%PUBLIC_URL%/js/slick.min.js"></script>
   <script src="%PUBLIC_URL%/js/jquery.meanmenu.min.js"></script>
